# cargonauts-cli

./: Cargo.toml  README.md
src/: generator.rs  main.rs  new.rs
